--- a/public/500.html
+++ b/public/500.html
@@ -1,26 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Algo errado</title>
+  <title>Opz!</title>
   <meta charset="utf-8">
   <style type="text/css">
-    body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
-    div.dialog {
-      width: 25em;
-      padding: 0 4em;
-      margin: 4em auto 0 auto;
-      border: 1px solid #ccc;
-      border-right-color: #999;
-      border-bottom-color: #999;
-    }
-    h1 { font-size: 100%; color: #f00; line-height: 1.5em; }
+    body {color: #666; text-align: center; font-family: arial, sans-serif}
+    
+    h1 { font-size: 25px; color: #f00; line-height: 1.5em; }
   </style>
 </head>
 
 <body>
   <!-- This file lives in public/500.html -->
   <div class="dialog">
-    <h1>Desculpe, houve algum erro.</h1>
+  <img src="/erro.jpeg"/>
+    <h1>Opz, houve algum erro.</h1>
+    <a href="/">Voltar</a>
   </div>
 </body>
 </html>
